Added sidebar and toolbar to the main display page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,32 +1,39 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .example-is-mobile .example-toolbar {
-    position: fixed;
-    /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-    z-index: 2;
-  }
-  
-  h1.example-app-name {
-    margin-left: 8px;
-  }
-  
-  .example-sidenav-container {
-    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-       causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-    flex: 1;
-  }
-  
-  .example-is-mobile .example-sidenav-container {
-    /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
-       `<body>` to be our scrolling element for mobile layouts. */
-    flex: 1 0 auto;
-  }
-  
+.sidenav-container {
+  height: 100%;
+  width: 100%;
+}
+
+.sidenav {
+  width: 200px;
+  margin-top:8px;
+  max-height: 400px;
+  border: 0px;
+  background: snow;
+}
+
+.image-home{
+  background: url("../assets/icon.png");
+  background-size: 100%;
+  width: 45px;
+  height: 45px;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+}
+.example-form {
+  margin-left:100px;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  font-size: 0.7em;
+}
+.right-spacer {
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  position: relative;
+}
+.example-full-width {
+  width: 100%;
+}
