--- a/src/app/util/navigation/navigation.component.css
+++ b/src/app/util/navigation/navigation.component.css
@@ -1,29 +1,26 @@
-.sidenav-container {
-    height: 100%;
-    width: 100%;
+/* .sidenav-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   }
   
   .sidenav {
     width: 200px;
-    margin-top:8px;
     max-height: 400px;
     border: 0px;
     background: snow;
   }
   
-  .image-home{
-    background: url("../../../assets/icon.png");
-    background-size: 100%;
-    width: 45px;
-    height: 45px;
-  }
+  
   
   .mat-toolbar.mat-primary {
     position: sticky;
     top: 0;
   }
   .example-form {
-    min-width: 50px;
+    min-width: 100px;
     font-size: 0.7em;
   }
   .right-spacer {
@@ -32,6 +29,97 @@
     position: relative;
   }
   .example-full-width {
-    width: 50%;
+    width: 100%;
+  }
+  .left_nav_list{
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    font-weight: bold;
+    color: #757575;
+    margin-left: 20px;
+  }
+  .left_nav_list > a{
+    display: inline-flex;
+    vertical-align: middle;
+    margin-bottom: 20px !important;
+  }
+  .left_nav_list > a > mat-icon{
+    margin-right: 15px;    
+  }
+  .example-container {
+    width: 100%;
+    height: 100vh;
   }
   
+  .example-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .example-sidenav {
+    padding: 20px;
+  } */
+  .example-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  
+  .example-is-mobile .example-toolbar {
+    position: fixed;
+    z-index: 2;
+  }
+  
+  h1.example-app-name {
+    margin-left: 8px;
+  }
+  
+  .example-sidenav-container {
+    flex: 1;
+  }
+  
+  .example-is-mobile .example-sidenav-container {
+    flex: 1 0 auto;
+  }
+  .image-home{
+    background: url("../../../assets/icon.png");
+    background-size: 100%;
+    width: 45px;
+    height: 45px;
+  }
+  
+  .right-spacer {
+    flex-wrap: wrap;
+    flex: 1 1 auto;
+    position: relative;
+  }
+  .example-form {
+    min-width: 100px;
+    font-size: 0.7em;
+  }
+  mat-sidenav{
+    margin-top:2px;    
+    padding: 10px;
+  }
+  .content{
+    width: 200px;
+    display: inline-flex;
+    vertical-align: middle;
+    padding: 10px;
+  }
+  .content:hover{
+    background: rgba(1,1,1,0.2);
+  }
+  .text_content {
+    margin-left:10px;
+  }
+  .icon_content{
+    margin-left:70px;
+  }
