--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -2,54 +2,54 @@
   <span style="font-size: 25px;">Issue History</span>
 </div>
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table">
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
+  Position Column
+  <ng-container matColumnDef="serial">
     <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="BookId">
-    <th mat-header-cell *matHeaderCellDef> Book Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.BookId}} </td>
+  <ng-container matColumnDef="isbn">
+    <th mat-header-cell *matHeaderCellDef> ISBN number </th>
+    <td mat-cell *matCellDef="let element"> {{element.isbn}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="BookTitle">
+  <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef> Book title </th>
-    <td mat-cell *matCellDef="let element"> {{element.BookTitle}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="Author">
+  <ng-container matColumnDef="author">
     <th mat-header-cell *matHeaderCellDef> Author </th>
-    <td mat-cell *matCellDef="let element"> {{element.Author}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.author}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="Issue">
+  <ng-container matColumnDef="issue">
     <th mat-header-cell *matHeaderCellDef> Issue </th>
-    <td mat-cell *matCellDef="let element"> {{element.Issue}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.issue | date}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="Due">
+  <ng-container matColumnDef="due">
     <th mat-header-cell *matHeaderCellDef> Due </th>
-    <td mat-cell *matCellDef="let element"> {{element.Due}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.due | date}} </td>
   </ng-container>
+  
 
-  <ng-container matColumnDef="Fine">
+  <ng-container matColumnDef="fine">
     <th mat-header-cell *matHeaderCellDef> Fine ($) </th>
-    <td mat-cell *matCellDef="let element"> {{element.Fine}} </td>
+    <td mat-cell *matCellDef="let element"> {{ getFine(element.due)| currency}}  </td>
   </ng-container>
 
   <ng-container *ngIf="_authService.Admin" matColumnDef="Return">
     <th mat-header-cell *matHeaderCellDef> Return </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-stroked-button color="warn" (click)="return(element.return)">Return</button>
+      <button mat-stroked-button color="warn" (click)="return(element.isbn)">Return</button>
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
