--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -1,16 +1,21 @@
 <div style="background: snow; height: 30px; text-align: center;padding: 5px;">
   <span style="font-size: 25px;">Issue History</span>
 </div>
-<mat-form-field>
+<mat-form-field style="width: 50%;">
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table">
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  Position Column
+  <!-- Position Column -->
   <ng-container matColumnDef="serial">
     <th mat-header-cell *matHeaderCellDef> No. </th>
     <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="email" *ngIf="_authService.Admin">
+      <th mat-header-cell *matHeaderCellDef> Email id </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
   </ng-container>
 
   <!-- Name Column -->
@@ -46,7 +51,7 @@
     <td mat-cell *matCellDef="let element"> {{ getFine(element.due)| currency}}  </td>
   </ng-container>
 
-  <ng-container *ngIf="_authService.Admin" matColumnDef="Return">
+  <ng-container *ngIf="_authService.Admin" matColumnDef="return">
     <th mat-header-cell *matHeaderCellDef> Return </th>
     <td mat-cell *matCellDef="let element">
       <button mat-stroked-button color="warn" (click)="return(element.isbn)">Return</button>
