--- a/src/app/register-book/register-book.component.html
+++ b/src/app/register-book/register-book.component.html
@@ -20,11 +20,34 @@
                 </mat-form-field>
                 <br>
                 <mat-form-field class="example-full-width">
-                    <input [(ngModel)]="RegisterBook.category" name="category" matInput placeholder="Category" type="name">
+                        <mat-select placeholder="Select a category" name="category" [(ngModel)]="RegisterBook.category">
+                            <mat-option value="mat">Mathematics</mat-option>
+                            <mat-option value="sci">Science</mat-option>
+                            <mat-option value="tec">Technology</mat-option>
+                            <mat-option value="art">Art</mat-option>
+                            <mat-option value="his">History</mat-option>
+                            <mat-option value="hea">Health</mat-option>
+                            <mat-option value="ent">Entertainment</mat-option>
+                            <mat-option value="fic">Fiction</mat-option>
+                            <mat-option value="mis">Miscellaneous</mat-option>
+                        </mat-select>
+                    <!-- <input  name="category" matInput placeholder="Category" type="name"> -->
                 </mat-form-field>
                 <br>
                 <mat-form-field class="example-full-width">
-                    <input [(ngModel)]="RegisterBook.location" name="location" matInput placeholder="Location" type="name">
+                        <mat-select placeholder="Select a location" name="location" [(ngModel)]="RegisterBook.location">
+                            <mat-option value="1">1</mat-option>
+                            <mat-option value="2">2</mat-option>
+                            <mat-option value="3">3</mat-option>
+                            <mat-option value="4">4</mat-option>
+                            <mat-option value="5">5</mat-option>
+                            <mat-option value="6">6</mat-option>
+                            <mat-option value="7">7</mat-option>
+                            <mat-option value="8">8</mat-option>
+                            <mat-option value="9">9</mat-option>
+                            <mat-option value="10">10</mat-option>
+                        </mat-select>
+                    <!-- <input [(ngModel)]="RegisterBook.location" name="location" matInput placeholder="Location" type="name"> -->
                 </mat-form-field>
                 <br>
                 <mat-form-field class="example-full-width">
