--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 body { 
     font-family: 'Roboto', sans-serif;
+    background: rgb(255, 255, 255)
 }
 
 .danger-dark{
