--- a/src/app/account-details/account-details.component.html
+++ b/src/app/account-details/account-details.component.html
@@ -1,23 +1,31 @@
-<div style="display: block;height: 80vh;" fxLayoutAlign="center center" fxLayout="row" fxLayoutGap="20px">
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>
-                    <h4>Account Details</h4>
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <form class="example-form">
-                    <mat-form-field class="example-full-width">
-                        <input [(ngModel)]="AccountDetails.email" name="email" matInput placeholder="Email" type="email">
-                    </mat-form-field>
-                    <br>
-                    <mat-form-field class="example-full-width">
-                        <input [(ngModel)]="AccountDetails.password" name="password" matInput placeholder="*Password"  [type]="hidePassword ? 'password' : 'text'">
-                        <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility' : 'visibility_off'}}</mat-icon>                        
-                    </mat-form-field>
-                    <br>
-                    <button (click)="change_details()" mat-raised-button color="primary">Update</button>
-                </form>
-            </mat-card-content>
-        </mat-card>    
+<!-- <div style="display: block;height: 80vh;" fxLayoutAlign="center center" fxLayout="row" fxLayoutGap="20px">
+    
+</div> -->
+<div style="display: block;height: 80vh;" fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="30px">
+    <mat-card style=" background: #D1C4E9">
+        <mat-card-content>
+            Change the password and email
+        </mat-card-content>
+    </mat-card>
+    <mat-card >
+        <mat-card-header>
+            <mat-card-title>
+                <h4>Account Details</h4>
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <form class="example-form">
+                <mat-form-field class="example-full-width">
+                    <input [(ngModel)]="AccountDetails.email" name="email" matInput placeholder="Email" type="email">
+                </mat-form-field>
+                <br>
+                <mat-form-field class="example-full-width">
+                    <input [(ngModel)]="AccountDetails.password" name="password" matInput placeholder="*Password" [type]="hidePassword ? 'password' : 'text'">
+                    <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility' : 'visibility_off'}}</mat-icon>
+                </mat-form-field>
+                <br>
+                <button (click)="change_details()" mat-raised-button color="primary">Update</button>
+            </form>
+        </mat-card-content>
+    </mat-card>
 </div>
