--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -1,10 +1,12 @@
-<div style="background: snow; height: 30px; text-align: center;padding: 5px;">
+<div style="background: rgb(255,250,250); height: 30px; text-align: center;padding: 5px;">
   <span style="font-size: 25px;">Issue History</span>
 </div>
-<mat-form-field style="width: 50%;">
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table">
-</mat-form-field>
-
+<div>
+  <mat-form-field style="width: 50%;background: rgb(255,250,250)">
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table (using any data you wish..)">
+  </mat-form-field>
+  <mat-paginator style="width: 50%; float:right; background: rgb(255,250,250);" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <!-- Position Column -->
@@ -14,8 +16,8 @@
   </ng-container>
 
   <ng-container matColumnDef="email" *ngIf="_authService.Admin">
-      <th mat-header-cell *matHeaderCellDef> Email id </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    <th mat-header-cell *matHeaderCellDef> Email id </th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
   </ng-container>
 
   <!-- Name Column -->
@@ -44,11 +46,11 @@
     <th mat-header-cell *matHeaderCellDef> Due </th>
     <td mat-cell *matCellDef="let element"> {{element.due | date}} </td>
   </ng-container>
-  
+
 
   <ng-container matColumnDef="fine">
     <th mat-header-cell *matHeaderCellDef> Fine ($) </th>
-    <td mat-cell *matCellDef="let element"> {{ getFine(element.due)| currency}}  </td>
+    <td mat-cell *matCellDef="let element"> {{ getFine(element.due)| currency}} </td>
   </ng-container>
 
   <ng-container *ngIf="_authService.Admin" matColumnDef="return">
@@ -60,4 +62,3 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
